# zephyr

./: .gitignore  CONTEXT.md  GATEWAY_PROTOCOLS_PRD.md  GEMINI.md  IPC_INFRA_PRD.md  OTA_READINESS_PRD.md  POWER_MGMT_PRD.md  PROJECT_EVOLUTION_ANALYSIS.md  TWISTER_DEEP_DIVE.md  ZEPHYR_ECOSYSTEM_GUIDE.md  boot_research.md  hardware_map.yaml.example  renode_help.txt  renode_internal.log.1  renode_internal.log.2  renode_internal.log.3  renode_internal.log.4  renode_internal.log.5  renode_internal.log.6  renode_internal.log.7  renode_internal.log.8  task.md  west.yml  workflow.sh
.agents/skills/vango/: SKILL.md
.agents/skills/zephyr/: SKILL.md
.github/workflows/: build.yml
.west/: config
apps/ref_6dof_sensor/: CMakeLists.txt  Kconfig  sysbuild.cmake
apps/ref_6dof_sensor/src/: main.c
apps/ref_6dof_sensor/targets/v32_cpuapp_gateway/: prj.conf
apps/ref_6dof_sensor/targets/v32_cpuapp_gateway_ns/: prj.conf
apps/ref_bms_eis/: CMakeLists.txt  Kconfig  sysbuild.cmake
apps/ref_bms_eis/src/: main.c
apps/ref_drone_fcc/: CMakeLists.txt  Kconfig  sysbuild.cmake
apps/ref_drone_fcc/src/: main.c
apps/ref_medical_wearable/: CMakeLists.txt  Kconfig  sysbuild.cmake
apps/ref_medical_wearable/boards/: native_sim.conf
apps/ref_medical_wearable/src/: main.c
apps/ref_motor_pred_maint/: CMakeLists.txt  Kconfig  sysbuild.cmake
apps/ref_motor_pred_maint/boards/: native_sim.conf
apps/ref_motor_pred_maint/src/: main.c
apps/ref_motor_pred_maint/targets/v32_cpuapp_gateway_ns/: prj.conf
apps/ref_nilm_meter/: CMakeLists.txt  Kconfig  prj.conf  sysbuild.cmake
apps/ref_nilm_meter/boards/: native_sim.conf
apps/ref_nilm_meter/src/: main.c
apps/ref_nir_spectrometer/: CMakeLists.txt  Kconfig  sysbuild.cmake
apps/ref_nir_spectrometer/src/: main.c
apps/ref_power_quality/: CMakeLists.txt  Kconfig  sysbuild.cmake
apps/ref_power_quality/boards/: native_sim.conf
apps/ref_power_quality/src/: main.c
apps/ref_power_quality/targets/v32_cpuapp_gateway_ns/: prj.conf
apps/ref_radar_ranging/: CMakeLists.txt  Kconfig  sysbuild.cmake
apps/ref_radar_ranging/src/: main.c
apps/ref_v2g_charger/: CMakeLists.txt  Kconfig  sysbuild.cmake
apps/ref_v2g_charger/src/: main.c
apps/vango_demo/: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf  sysbuild.cmake  sysbuild.conf  testcase.yaml  v85xxp.overlay  v85xxp_test.overlay
apps/vango_demo/boards/: native_sim.conf  native_sim.overlay
apps/vango_demo/src/: main.c  protocol.h
apps/vango_demo/src/drivers/: boot_cpu1.c  watchdog.c
apps/vango_demo/src/services/: comms.c  ipc_service.c  low_power.c  metering.c  modbus_service.c  network_service.c  ota_service.c  power_monitor.c  security.c  storage_init.c  wasm_sandbox.c  wasm_sandbox.h
apps/vango_demo/sysbuild/: mcuboot.conf  mcuboot.overlay  sysbuild.cmake
apps/vango_demo/targets/v32_cpu0_metering/: app.overlay  prj.conf  target.cmake
apps/vango_demo/targets/v32_cpu1_gateway/: app.overlay  prj.conf  target.cmake
apps/vango_demo/targets/v32_cpuapp_gateway/: app.overlay  prj.conf  target.cmake
apps/vango_demo/targets/v32_cpuapp_gateway_ns/: app.overlay  prj.conf  target.cmake
apps/vango_demo/targets/v32_cpumeter_metering/: app.overlay  prj.conf  target.cmake
apps/vango_demo/targets/v85_collector/: app.overlay  prj.conf  target.cmake
apps/vango_demo/wasm_examples/: protocol_parser.c  safety_calculator.c  sensor_filter.c
doc/: SIMULATION_STRATEGY_GUIDE.md  ZEPHYR_HARDCORE_ENGINEERING_GUIDE.md
docs/: EVOLUTION_ROADMAP.md
docs/adr/: 0001-ipc-serialization-stay-simple.md
docs/prd/: iiot_motor_guard_prd.md  power_quality_prd.md  radar_ranging_prd.md  smart_circuit_breaker_prd.md  smart_meter_nilm_ip_prd.md
docs/prds/: 01_ARCH_DECOUPLING_AND_IPC_PRD.md  02_ROBUSTNESS_AND_SECURITY_PRD.md  03_OBSERVABILITY_AND_TWIN_PRD.md  04_ADVANCED_PERIPHERALS_CONTROL_PRD.md  05_DSP_AND_EDGE_AI_PRD.md  06_COMMERCIAL_REFERENCE_DESIGNS_PRD.md  07_TRUSTZONE_SECURITY_ORGANIZATION_PRD.md
docs/superpowers/specs/: 2026-07-03-tinyml-pm-axon-sim-design.md
drivers/: CMakeLists.txt  Kconfig
drivers/ad7616/: AD7616.text  CMakeLists.txt  Kconfig  ad7616.c  ad7616.h
drivers/sim_axon/: CMakeLists.txt  Kconfig  sim_axon.c
dts/bindings/: analog-devices,ad7616.yaml  vango,sim-axon.yaml
include/: common_core.h  protocol.h
lib/: CMakeLists.txt  Kconfig
lib/control/: CMakeLists.txt  Kconfig
lib/control/src/: leso.c  pid.c  spectrum.c
lib/flashdb/: CMakeLists.txt  Kconfig  fdb_shell.c
lib/flashdb/port/: fal.h  fdb_cfg.h  fdb_port.c
lib/janpatch/: CMakeLists.txt  Kconfig
lib/janpatch/include/: janpatch.h
lib/janpatch/src/: janpatch.c
tests/algo_dsp/: CMakeLists.txt  prj.conf  prj_qemu.conf  testcase.yaml
tests/algo_dsp/pytest/: test_shell.py
tests/algo_dsp/renode/: algo_test.resc  test.resc  v32.repl  v32_run.resc
tests/algo_dsp/src/: main.c
tests/flashdb/: CMakeLists.txt  prj.conf  testcase.yaml
tests/flashdb/src/: main.c
tests/ref_6dof_sensor/: testcase.yaml
tests/ref_6dof_sensor/renode/: v32_run.resc
tests/ref_bms_eis/: testcase.yaml
tests/ref_bms_eis/renode/: v32_run.resc
tests/ref_drone_fcc/: testcase.yaml
tests/ref_drone_fcc/renode/: v32_run.resc
tests/ref_medical_wearable/: testcase.yaml
tests/ref_medical_wearable/renode/: v32_run.resc
tests/ref_motor_pred_maint/: testcase.yaml
tests/ref_motor_pred_maint/renode/: v32_run.resc
tests/ref_nilm_meter/: testcase.yaml
tests/ref_nilm_meter/renode/: v32_run.resc
tests/ref_nir_spectrometer/: testcase.yaml
tests/ref_nir_spectrometer/renode/: v32_run.resc
tests/ref_power_quality/: testcase.yaml
tests/ref_power_quality/renode/: v32_run.resc
tests/ref_radar_ranging/: testcase.yaml
tests/ref_radar_ranging/renode/: v32_run.resc
tests/ref_v2g_charger/: testcase.yaml
tests/ref_v2g_charger/renode/: v32_run.resc
tests/vango_demo/: CMakeLists.txt  prj.conf  testcase.yaml
tests/vango_demo/pytest/: test_dual_core.py  test_ota.py
tests/vango_demo/renode/: v32_dual.repl  v32_dual_run.resc  v32_run.resc
tests/vango_demo/src/: main.c
zephyr/: module.yml
(+3 files in other folders)
